<resources>
    <string name="app_name" translatable="false">Charg</string>
    <string name="title_activity_maps">Map</string>
    <string name="ask_login">You must set eth address for using this app.\nWithout eth address some functions will be disabled\nDo you want to login?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_defined">not defined</string>
    <string name="eth_address_copied">Ethereum address was copied to clipboard</string>
    <string name="err_loading_balance">Error while loading balance</string>
    <string name="not_implemented_yet">Arriving March, 2018</string>
    <string name="eth_address_empty">You must set ethereum address</string>
    <string name="eth_private_key_empty">Private key is empty</string>
    <string name="eth_address">Ethereum address</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="private_key">Ethereum wallet private key</string>
    <string name="ask_delete_wallet">All data will be erased. Do you really want to log out?</string>
    <string name="eth_test_address" translatable="false">0xce443043d36bd4027a0c52ca2a17ba370e458bc8</string>
    <string name="ask_parking_off">You are parking now. Do you want to stop parking?</string>
    <string name="ask_charging_off">You are charging now. Do you want to stop?</string>
    <string name="execute_tansaction">Transaction executed</string>
    <string name="ask_user_approvement_charge">Charging station is ready for using. Do you want to start charging?</string>
    <string name="is_charging">Station state is not idle. Try again later.</string>
    <string name="is_request">Please wait for response from charging station</string>
    <string name="favorites">Favorites</string>
    <string name="loading_details">Loading details…</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="smart_contract_address">Smart contract address</string>
    <string name="gas_price">Gas price</string>
    <string name="max_fee">Max TX fee</string>
    <string name="gas_limit">Gas limit</string>
    <string name="destination">Destination</string>
    <string name="next">Next</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="sending_tokens_please_wait_for_some_time">Sending tokens. Please wait for some time</string>
    <string name="status">Status</string>
    <string name="sending">Sending</string>
    <string name="result">Result</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="tx_hash">Tx hash</string>
    <string name="from">From</string>
    <string name="tx_fee">Tx fee</string>
    <string name="gas_used">Gas used</string>
    <string name="contract">Contract</string>
    <string name="charge">Charge</string>
    <string name="time">Time</string>
    <string name="charging">Charging</string>
    <string name="executing_smart_contract">Executing smart contract function…</string>
    <string name="charge_on">Charge on</string>
    <string name="charge_off">Charge off</string>
    <string name="balance">Balance</string>
    <string name="cost">Cost</string>
    <string name="loading">Loading</string>
    <string name="my_balance">My balance</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="station">Station</string>
    <string name="success">Success</string>
    <string name="not_executed_yet">Not executed yet</string>
    <string name="operation">Operation</string>
    <string name="execute">Execute</string>
    <string name="time_not_defined">Time is not defined</string>
    <string name="contract_result_not_success">Contract status is not success</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="stop_charge">Stop charge</string>
    <string name="time_left">Time left</string>
    <string name="you_are_charged">You are charged</string>
    <string name="you_must_stop_charging">You must end you charging first</string>
    <string name="station_not_idle">Station is not idle</string>
    <string name="station_not_ready">Station is not ready</string>
    <string name="unknown_station_state">Unknown station state</string>
    <string name="cancel_user">Cancelled by user</string>
    <string name="become_station_owner">Become station owner</string>
    <string name="buy_charg">Buy charg</string>
    <string name="get_more_charg">Get more charg</string>
    <string name="not_enough_chg">You have not enough CHG tokens</string>
    <string name="parking">Parking</string>
    <string name="invalid_token">Invalid authorization token</string>
    <string name="eror_create_quote">Error while create quote</string>
    <string name="erro_add_item_to_cart">Error while adding item to cart</string>
    <string name="error_while_creating_order">Error while creating order</string>
    <string name="error_generating_token_braintree">Error while generating braintree token</string>
    <string name="node_is_not_auth">Node is not authorized</string>
    <string name="charging_rate">Charging rate</string>
    <string name="parking_rate">Parking rate</string>
    <string name="you_must_stop_parking">You must stop parking</string>
    <string name="stop">Stop</string>
    <string name="parking_off">Parking off</string>
    <string name="free">Free</string>
    <string name="busy">Busy</string>
    <string name="no_data_available">No data available</string>
    <string name="error_loading_payment_token">Error while loading payment token</string>
    <string name="error_service_wifi_on">Error while start WiFi service</string>
</resources>
