<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from" />

    <TextView
        android:id="@+id/tv_from"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to" />

    <TextView
        android:id="@+id/tv_to"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/tv_amount"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gas_limit" />

    <TextView
        android:id="@+id/tv_gas_limit"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gas_price" />

    <TextView
        android:id="@+id/tv_gas_price"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_fee" />

    <TextView
        android:id="@+id/tv_max_fee"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>