<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark">

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_time"
            style="@style/TextViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="16 seconds" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parking_rate" />

    <TextView
        android:id="@+id/tv_charging_rate"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="123" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost" />

    <TextView
        android:id="@+id/tv_cost"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="123" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_balance" />

    <TextView
        android:id="@+id/tv_balance_chg"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="123" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/ic_ok" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/success" />

        <Button
            android:id="@+id/btn_get_more_chg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_more_charg"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>