<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark">

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/tv_start_time"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time" />

    <TextView
        android:id="@+id/tv_end_time"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <FrameLayout
            android:id="@+id/lt_ended"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                style="@style/TextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/you_are_charged" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_ok_big" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/lt_processing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                style="@style/TextViewKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/charging"
                android:textSize="26sp" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminate="true" />

        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_time_left_label"
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_left" />

    <TextView
        android:id="@+id/tv_time_left"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_charge" />

</LinearLayout>