<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark">

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            tools:src="@drawable/ic_ok" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            tools:text="Success" />

    </LinearLayout>

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tx_hash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_txhash"
            style="@style/TextViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            tools:text="0xc18a483e64266f0ec08ac2522da8d8559e3489722ec2898d6147f59795dc86b8" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/from" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_from"
            style="@style/TextViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            tools:text="0x97357673e3082e0ec130eafa3f1216773f9e7446" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_to"
            style="@style/TextViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            tools:text="0x2a66f9292565e46d4007d05f342facc7c5d85f9d" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        style="@style/TextViewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gas_used" />

    <TextView
        android:id="@+id/tv_fee"
        style="@style/TextViewValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        tools:text="0x2a66f9292565e46d4007d05f342facc7c5d85f9d" />

</LinearLayout>